Squash all 4.2.2 changes into one
Update widget with home time changes

Bug: 7498378
Added an update broadcast when Home TZ is turn on/off or the time zone is changed.

Change-Id: Id447a5b12df49fbc494850af3f8a879e64c3458f

Make Clock dream default to "dim"

Bug: 7485798
Change-Id: Ibd8a65c45f798aa2c9d7b1fd8cd5c2b008255578

Read cities names for DB and not from list

Bug: 7413861

The list of user selected cities in world clock was using the name from the usr's list and
not from the DB. When a change of locale is done on the device, the cities name were not changed.
Changed the WorldClock adapter to use the DB name and timezone if available.
Added suport in both app and widget.

Change-Id: I029581f9fd6cf245ac980c1d1352e0d777924ccd

Move SDK version to 17

Bug: 7551129
Change-Id: Idb4a62ceece91d4c77d78362aae5e97a077be33c

Code formatting fixes.

Bug: 7413861
Change-Id: Ia5207e830c8bddf47469ed6b9769cdc98c82b1a2

Make on/off switch more visible

Bug:7555181, 7536599

Changed the dimming effect of an alarm item in alarm settings. When the alarm is off
the alpha if the view is reduced except for the on/off switch.
Disable on/off switch when in CAB mode

Change-Id: I89173ca5124b12fe04a92783d2cc870cfda481c8

Revert "Fix flickers in numeric pad of time picker"

Bug: 7407383
Cannot reporoduce the problem described in the bug after reverting the workaround
in builds JOP40C and JDP45 on any device.
Reverting the workaround.
This reverts commit 3060c5130336909deebf61d6c025be6d62bb3f55

Change-Id: Ie3b7285dc712a105cda8d32088ed0cd42098be36

Expand top margin for digital clock

Bug: 7429201
Change-Id: I9621bac26f357f22d61f9340089bb44961b7a540

Alarm delete confirmation

Change-Id: I591c959efb051d800f6279701d84186aab9ecaae

Put the seconds hand on top in the analog clock

Bug: 7555265
Change-Id: I4be90e5960492b0c8d38d7d2c52bd0dd18f0c6e0

Sort timezones in timezone picker

Bug: 7596888
Change-Id: Ia122cf85c36f402008b5cbf6249481cb9605126b

Extract boilerplate code into drawHand() util

--- a/res/layout/timer_fragment.xml
+++ b/res/layout/timer_fragment.xml
@@ -60,8 +60,6 @@
         android:orientation="vertical">
         <com.android.deskclock.TimerSetupView
             android:id="@+id/timer_setup"
-            android:layout_marginLeft="8dip"
-            android:layout_marginRight="8dip"
             android:layout_width="match_parent"
             android:layout_height="0dip"
             android:layout_weight="1" />
@@ -78,7 +76,7 @@
                <Button
                     android:id="@+id/timer_cancel"
                     android:text="@string/timer_cancel"
-                    android:layout_width="0dip"
+                    android:layout_width="match_parent"
                     style="@style/button"
                     android:layout_weight="1"
                     android:background="@drawable/item_background"
@@ -93,20 +91,11 @@
                <Button
                     android:id="@+id/timer_start"
                     android:text="@string/timer_start"
-                    android:layout_width="0dip"
+                    android:layout_width="match_parent"
                     style="@style/button"
                     android:layout_weight="1"
                     android:background="@drawable/item_background"
                     android:layout_height="wrap_content" />
-               <ImageButton
-                   android:id="@+id/menu_button"
-                   android:contentDescription="@string/button_menu"
-                   style="?android:attr/actionOverflowButtonStyle"
-                   android:background="@drawable/item_background"
-                   android:onClick="clockButtonsOnClick"
-                   android:layout_gravity="right"
-                   android:layout_width="64dip"
-                   android:layout_height="match_parent" />
               </LinearLayout>
            </FrameLayout>
     </LinearLayout>
